# dogoap

./: Cargo.toml  Makefile  README.md  build-wasm-examples.sh
.github/workflows/: ci.yml  wasm-examples.yml
crates/bevy_dogoap/: Cargo.toml  README.md
crates/bevy_dogoap/examples/: bevy_basic.rs  cells.rs  miner.rs  resman.rs
crates/bevy_dogoap/src/: lib.rs  macros.rs  planner.rs  plugin.rs  prelude.rs  traits.rs
crates/bevy_dogoap/tests/: basic_external.rs  basic_internal.rs
crates/dogoap/: Cargo.toml  README.md
crates/dogoap/benches/: long_plan.rs
crates/dogoap/examples/: basic.rs  long_plan.rs  simple.rs
crates/dogoap/src/: action.rs  compare.rs  datum.rs  effect.rs  goal.rs  lib.rs  localstate.rs  mutator.rs  planner.rs  prelude.rs  simple.rs
crates/dogoap/tests/: tests.rs
crates/dogoap_macros/: Cargo.toml
crates/dogoap_macros/src/: lib.rs
docs/: glossary.md
