[workspace]
members = ["crates/*"]
resolver = "2"

[profile.gold-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"


[workspace.dependencies]
dogoap = { path = "crates/dogoap", version = "0.6.0" }
dogoap_macros = { path = "crates/dogoap_macros", version = "0.6.0" }

bevy_ecs = { version = "0.17", default-features = false }
bevy_app = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_tasks = { version = "0.17", default-features = false }
bevy-trait-query = { version = "0.17.1" }

rand = "0.9.2"
pathfinding = "4.14.0"
syn = { version = "2.0.108", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.103"

# for running examples
bevy = { version = "0.17.2", default-features = true }
