[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/victorb/dogoap"
keywords = ["goap", "ai"]
categories = ["game-development"]

[profile.gold-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"


[workspace.dependencies]
dogoap = { path = "crates/dogoap", version = "0.6.0" }
dogoap_macros = { path = "crates/dogoap_macros", version = "0.6.0" }

bevy_ecs = { version = "0.17", default-features = false }
bevy_app = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_tasks = { version = "0.17", default-features = false }
bevy-trait-query = { version = "0.17.1" }

rand = "0.9.2"
pathfinding = "4.14.0"
syn = { version = "2.0.108", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.103"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"

# for running examples
bevy = { version = "0.17.2", default-features = true }

[workspace.lints.rust]
# Todo: enable this once we have better docs
#missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[profile.dev.package."*"]
inherits = "dev"
opt-level = 3

[profile.dev]
opt-level = 0
