[package]
name = "bevy_dogoap"
version = "0.6.0"
edition = "2021"
description = "bevy_dogoap"
license = "MIT"
homepage = "https://github.com/victorb/dogoap"

[features]
default = ["compute-pool"]
compute-pool = ["dep:bevy_tasks"]

[dependencies]
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_log = { workspace = true }
bevy_reflect = { workspace = true }
bevy_platform = { workspace = true }
bevy_tasks = { workspace = true, optional = true }
bevy-trait-query = { workspace = true }
dogoap = { workspace = true }
dogoap_macros = { workspace = true}
rand = { workspace = true}

[dev-dependencies]
bevy = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
