[package]
name = "bevy_dogoap"
version = "0.6.0"
description = "Integration between dogoap and bevy"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
default = ["compute-pool"]
compute-pool = ["dep:bevy_tasks", "dep:crossbeam-channel"]

[dependencies]
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_log = { workspace = true }
bevy_reflect = { workspace = true }
bevy_platform = { workspace = true }
bevy_tasks = { workspace = true, optional = true }
bevy-trait-query = { workspace = true }

dogoap = { workspace = true }
dogoap_macros = { workspace = true}
rand = { workspace = true}
crossbeam-channel = { workspace = true, optional = true}

[dev-dependencies]
bevy = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
