[package]
name = "dogoap"
version = "0.6.0"
edition = "2021"
description = "dogoap"
license = "MIT"
homepage = "https://github.com/victorb/dogoap"

[dependencies]
bevy_reflect = { workspace = true }
pathfinding = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "long_plan"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
