[package]
name = "dogoap"
version = "0.6.0"
description = "GOAP implemented in data-oriented way"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
bevy_reflect = { workspace = true, optional = true }
pathfinding = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "long_plan"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
