[package]
name = "dogoap_macros"
version = "0.6.0"
edition = "2021"
description = "dogoap_macros"
license = "MIT"
homepage = "https://github.com/victorb/dogoap"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
